# OpenCV

./: README.md
Divide "digital.png"/: CMakeLists.txt
Divide digital samples/: CMakeLists.txt
Divide digital samples/Sources/: main.cpp
Divide-digital/: CMakeLists.txt
Divide_digital.png/: CMakeLists.txt
